--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1109,7 +1109,7 @@
 		color: rgba(255, 255, 255, 0.5);
 		left: 4em;
 		opacity: 0.5;
-		position: absolute;
+		margin-top: 50px;
 	}
 
 		#footer .icons {
@@ -1183,5 +1183,16 @@
 				margin: 1em 0 0 0;
 				position: relative;
 			}
+
+		}
+
+		.label {
+			margin: 5px;
+		}
+
+		.transparent-style{
+
+    background-color: #ffffff;
+    opacity: .4;
 
 		}
